feat: implementa uso de roles no token